@@ -15,6 +15,7 @@
 - https://github.com/eclipse-syson/syson/issues/1192[#1192] [general-view] Add `ConnectionDefinition` in _General View_ diagram
 - https://github.com/eclipse-syson/syson/issues/1196[#1196] [general-view] Add _New Exhibit State with referenced State_ tool on `Part Usage` graphical elements.
 - https://github.com/eclipse-syson/syson/issues/1214[#1214] [export] Implement textual export of `ForkNode`.
+- https://github.com/eclipse-syson/syson/issues/1216[#1216] [export] Implement textual export of `JoinNode`.
 
 === New features
 
